hmake (3.14-1) UNRELEASED; urgency=low

  * New upstream relase
  * Switch to 3.0 (quilt) source format

 -- Joachim Breitner <nomeata@debian.org>  Sun, 31 Jan 2010 19:39:09 +0100

hmake (3.13-0.1) unstable; urgency=high

  * Non-maintainer upload.
  * Set urgency to high as this upload fixes an RC bug.
  * New upstream release:
    * Dropped patch to script/fixghc (applied upstream).
    * Dropped patch to src/interpreter/Makefile (applied upstream).
    * src/interpreter/SimpleLineEditor.hs (applied upstream).
  * scripts/confhc:
    * Filter out LINE pragma when determining the version number of
      GHC. (Closes: #427311)
  * src/hmake/{Config.hs,PackageConfig.hs}:
    * Update the program to search for the imports in another directory
      if the GHC version >= 6.8 as of that version they are shipped in
      $ghclibdir/lib/$package instead of $ghclibdir/imports
      (Closes: #459737)

 -- Arjan Oosting <arjan@debian.org>  Sat, 16 Feb 2008 23:02:48 +0100

hmake (3.12-1) unstable; urgency=low

  * New upstream version:
    * Builds with GHC 6.6. Closes: #393582.
    * Dropped patch to src/interpreter/HInteractive.hs (unnecessary
      now cpp is not used on that file).
    * Dropped patch to script/confhc (upstream applied an alternate fix).
    * Dropped patch to src/hmake/PackageConfig.hs (upstream applied an
      alternate fix).
    * Dropped patch to src/interpreter/Makefile (applied upstream).
    * Dropped patch to man/hmake.1 (applied upstream).
    * Dropped patch to Makefile (applied upstream).
  * make realclean rather than merely clean.
  * Added hacks to clean .hi files that get left behind.
  * Drop README that just pointed at the upstream website.
  * Updated debian/control so the new GHC arches get included.
  * Apply:
      Malcolm.Wallace@cs.york.ac.uk**20061030104744
      module Readline is now called System.Console.Readline,
      and it lives in -package readline instead of -package util (or wherever
      it used to be).