@@ -4,12 +4,12 @@ Priority: extra
 Maintainer: Debian Haskell Group <pkg-haskell-maintainers@lists.alioth.debian.org>
 Uploaders: Joachim Breitner <nomeata@debian.org>
 Standards-Version: 3.8.3
-Build-Depends: ghc6, sharutils, cdbs, debhelper (>= 7), libncurses5-dev
+Build-Depends: ghc6, sharutils, cdbs, debhelper (>= 7.0.50~), libncurses5-dev
 
 Package: hmake
 Section: devel
 Architecture: any
-Depends: ${shlibs:Depends}, ghc6
+Depends: ${misc:Depends}, ${shlibs:Depends}, ghc6
 Description: The Haskell Make System
  This package contains a universal make system for use with
  Haskell compilers.  hmake is not compiler-dependent, so you
