@@ -2,6 +2,10 @@ hmake (3.14-1) UNRELEASED; urgency=low
 
   * New upstream relase
   * Switch to 3.0 (quilt) source format
+  * Adopt for the Debian Haskell Team
+  * Redo Packaging using dh (Closes: #536925, #403842)
+  * Steal patches from
+    http://www.freebsd.org/cgi/cvsweb.cgi/ports/devel/hs-hmake/
 
  -- Joachim Breitner <nomeata@debian.org>  Sun, 31 Jan 2010 19:39:09 +0100
 
